--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 body {
   font-family: Arial, sans-serif;
-  background: linear-gradient(to right, #6a11cb, #2575fc);
-  color: white;
+  background: linear-gradient(to right, #f6d5f7, #fbe9d7);
+  color: rgb(0, 0, 0);
   line-height: 1.6;
 }
 
@@ -18,7 +18,7 @@ header {
 
 header nav a {
   margin: 0 1rem;
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: none;
 }
 
@@ -27,8 +27,13 @@ section {
   text-align: center;
 }
 
+.project-section {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
 .project-card {
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(0,0, 0, 0.1);
   padding: 1rem;
   margin: 1rem auto;
   max-width: 600px;
@@ -41,9 +46,9 @@ section {
   align-items: center;
   justify-content: center;
   padding: 20px;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 /* Section photo */
@@ -55,7 +60,7 @@ section {
   width: 120px;
   height: 120px;
   border-radius: 50%; /* Rendu circulaire */
-  border: 3px solid white;
+  border: 3px solid rgb(0, 0, 0);
   object-fit: cover; /* Ajuste l'image au cadre */
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
@@ -69,7 +74,7 @@ section {
 .text-section p {
   font-size: 16px;
   margin: 5px 0 15px 0;
-  color: #cccccc;
+  color: #000000;
   text-align: center;
 }
 
@@ -77,11 +82,16 @@ section {
 .text-section nav a {
   margin-right: 15px;
   text-decoration: none;
-  color: #f5f5f5;
+  color: #1c1c1c;
   font-weight: bold;
   transition: color 0.3s;
 }
 
 .text-section nav a:hover {
-  color: #00bcd4;
+  color: #5c49a0;
+}
+
+.box {
+  display: flex;
+  justify-content: space-between;
 }
